# Vokel

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  SESSION_HANDOVER.md  build-log.example.md  implementation_plan.md  pyproject.toml
benchmarks/: __init__.py  hermes_handshake.py  hermes_ws_smoke.py  playback_latency.py  stst_latency.py  tool_mode_switch.py
docs/: agent-extensions.md  agent-tools.md  android-termux-hermes.md  audio-setup.md  foundation-direction.md  latency-budget.md  memory.md  model-matrix.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/audio/: toolCue.ts
scripts/: __init__.py  audio_probe.py  audio_profiles.py  audio_routes.py  download_models.py  hermes_stub_v2.py  install.sh  termux_bootstrap.sh  vad_probe.py
src/vokel/: __init__.py  agent_backend.py  auto_followup.py  cli.py  config.py  engine.py  giphy_search.py  hermes_client.py  image_search.py  inference.py  media_formatter.py  memory.py  playback.py  progress.py  tui.py  web.py  web_search.py
src/voyce/: __init__.py  audio.py  audio_profiles.py  audio_routes.py  cli.py  config.py  engine.py  events.py  lm_studio.py  memory.py  playback.py  progress.py  telemetry.py  text_chunker.py  tools.py  tui.py  turns.py  web.py  web_search.py
tests/: test_audio.py  test_audio_probe.py  test_audio_profiles.py  test_audio_routes.py  test_auto_followup.py  test_cli_memory.py  test_download_models.py  test_engine.py  test_hermes_client.py  test_inference.py  test_lm_studio.py  test_memory.py  test_playback.py  test_playback_benchmark.py  test_progress.py  test_streaming_phase3.py  test_stst_benchmark.py  test_stst_route_guard.py  test_telemetry.py  test_text_chunker.py  test_turns.py  test_vad_probe.py  test_web.py
(+11 files in other folders)
