[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voyce"
version = "0.1.0"
description = "Local-first conversational voice loop prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
audio = [
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "sherpa-onnx>=1.13.0",
    "kokoro-onnx>=0.3",
    "misaki[en]>=0.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
voyce = "voyce.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
