[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vokel"
version = "0.2.0"
description = "Voice-invoked local intelligence — speak, invoke tools, stay private."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "websockets>=12.0",
]

[project.optional-dependencies]
audio = [
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "sherpa-onnx>=1.13.0",
    "kokoro-onnx>=0.3",
    "misaki[en]>=0.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
vokel = "vokel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
